--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "./lib/*"
   ],
   "typings": "./lib/index.d.ts",
-  "peerDependencies": {
-    "tinky-keypress": ">=1.2.0"
+  "dependencies": {
+    "tinky-keypress": "^1.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.3.0",
